tdf (2.10.0-0) extra; urgency=medium

  * Added module tdf.core.tty to provide TTY control sequences (colors)
  * Extended class XmlMenu for reading external cabling information
  * Fixed unittest calls in class ScriptRunner
  * Added routine crate_status
  * Improved routine multiboard_function_test

 --  Bernhard Arnold <bernhard.arnold@cern.ch>  Wed, 13 Sep 2017 17:15:38 +0200

tdf (2.9.1-0) extra; urgency=medium

  * Added power_cycle_slot routine
  * Some connection file fixes

 --  Bernhard Arnold <bernhard.arnold@cern.ch>  Thu, 31 Aug 2017 12:55:49 +0200

tdf (2.9.0-0) extra; urgency=medium

  * Added Finor502MemoryImage class
  * Rewritten lemo_test routine

 --  Bernhard Arnold <bernhard.arnold@cern.ch>  Mon, 29 Aug 2017 13:26:04 +0200

tdf (2.8.0-0) extra; urgency=medium

  * Using extern CellConfig for XML adress tables
  * Removed abandoned executables tdf-testvector and tdf-unpacker

 --  Bernhard Arnold <bernhard.arnold@cern.ch>  Mon, 21 Aug 2017 12:51:36 +0200

tdf (2.7.0-0) extra; urgency=medium

  * Introduced new TestVector and memory format.
  * Enhanced memory image comparison.

 -- Bernhard Arnold <bernhard.arnold@cern.ch>  Fri, 17 Jun 2016 15:13:57 +0200

tdf (2.6.0-0) extra; urgency=medium

  * Added amc502butler command to API
  * Removed obsolete tdf-webcontrol related files
  * Removed status command from core.
  * Removed obsolete address table items and routines

 -- Bernhard Arnold <bernhard.arnold@cern.ch>  Fri, 17 Jun 2016 15:13:57 +0200

tdf (2.5.0-0) extra; urgency=medium

  * Added NOTICE level messages to tdf.core.logger
  * Updated extern module tdf.extern.ansistrm to support NOTICE level messages
  * Added function TDF_NOTICE to scripts engine

 -- Bernhard Arnold <bernhard.arnold@cern.ch>  Mon, 30 May 2016 12:51:04 +0200

tdf (2.4.1-0) extra; urgency=medium

  * Added module tdf.core.xmlmenu providing facility class XmlMenu
  * Cleaned up module tdf.core.binutils removing obsolete facility classes
